--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,80 +1,67 @@
 version: 2
 
 jobs:
-  plan-apply:
+  dev-plan-apply:
     working_directory: /terraform-circle-ci-s3
     docker:
       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
     steps:
       - checkout
       - run:
+          name: change directory
+          command: cd environments/dev-env/
           name: terraform init & plan
           command: |
-            terraform init -input=false
+            terraform init && terraform plan -out tfplan
+          name: terraform apply
+          command: |
+            terraform apply -auto-approve tfplan            
       - persist_to_workspace:
           root: .
           paths:
             - .
 
-  apply:
+  prod-plan:
+    working_directory: /terraform-circle-ci-s3
+    docker:
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+    steps:
+      - checkout
+      - run:
+          name: change directory
+          command: cd environments/prod-env/
+          name: terraform init & plan
+          command: |
+            terraform init && terraform plan -out tfplan           
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
+  prod-apply:
     docker:
       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
     steps:
       - attach_workspace:
           at: .
       - run:
+          name: change directory
+          command: cd environments/prod-env/    
           name: terraform
           command: |
-            terraform apply -auto-approve 
+            terraform apply -auto-approve tfplan
       - persist_to_workspace:
           root: .
           paths:
             - .
 
-  plan-destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform create destroy plan
-          command: |
-            terraform plan -destroy -out tfdestroy 
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform destroy
-          command: |
-            terraform apply -auto-approve tfdestroy
 workflows:
   version: 2
   plan_approve_apply:
     jobs:
-      - plan-apply
-      - hold-apply:
-          type: approval
+      - dev-plan-apply
+      - prod-plan
+      - prod-apply:
+          type: approval     
           requires:
-            - plan-apply
-      - apply:
-          requires:
-            - hold-apply
-      - plan-destroy:
-          requires:
-            - apply
-      - hold-destroy:
-          type: approval
-          requires:
-            - plan-destroy
-      - destroy:
-          requires:
-            - hold-destroy
+            - prod-plan
