--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,11 @@ jobs:
       - run:
           name: change directory
           command: cd environments/dev-env/
+      - run:          
           name: terraform init & plan
           command: |
             terraform init && terraform plan -out tfplan
+      - run:            
           name: terraform apply
           command: |
             terraform apply -auto-approve tfplan            
@@ -30,6 +32,7 @@ jobs:
       - run:
           name: change directory
           command: cd environments/prod-env/
+      - run:          
           name: terraform init & plan
           command: |
             terraform init && terraform plan -out tfplan           
@@ -46,7 +49,8 @@ jobs:
           at: .
       - run:
           name: change directory
-          command: cd environments/prod-env/    
+          command: cd environments/prod-env/  
+      - run:            
           name: terraform
           command: |
             terraform apply -auto-approve tfplan
