--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run:
           name: change directory
           command: pwd
+      - run:
           name: change directory
           command: ls          
       - run:
