--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - .
+            - dev-env
 
   prod-plan:
     docker:
@@ -31,7 +31,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - .
+            - prod-env
 
   prod-apply:
     docker:
@@ -46,7 +46,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - .
+            - prod-env
 
 workflows:
   version: 2
