--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,5 +56,5 @@ workflows:
       - prod-plan
       - prod-apply:
           type: approval     
-          requires:
-            - prod-plan
+          # requires:
+          #   - prod-plan
