--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:          
           name: terraform init & plan
           command: |
-            terraform init && terraform plan -out tfplan
+            pwd && ls && terraform init && terraform plan -out tfplan
       - run:            
           name: terraform apply
           command: |
