--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,14 +43,18 @@ jobs:
 
 workflows:
   version: 2
-  pull_request:
+  plan_approve_apply:
     jobs:
       - dev-plan-apply
-      - prod-plan
+      - prod-plan:
+          filters:
+            branches:
+              only:
+                - main
       - hold-apply:
           type: approval     
           requires:
             - prod-plan
       - prod-apply:
           requires:
-            - hold-apply
+            - hold-apply           
