--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,23 @@ jobs:
           name: terraform init & plan
           command: |
             cd environments/dev-env/ && terraform init && terraform plan -out tfplan
+      - persist_to_workspace:
+          root: .
+          paths:
+            - environments/dev-env
+
+  dev-apply:
+    docker:
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+    steps:
+      - attach_workspace:
+          at: . 
       - run:            
           name: terraform apply
           command: |
             cd environments/dev-env/ && terraform apply -auto-approve tfplan            
+
+
 
   prod-plan:
     docker:
@@ -45,7 +58,16 @@ workflows:
   version: 2
   plan_approve_apply:
     jobs:
-      - dev-plan-apply:
+      - dev-plan:
+          filters:
+            branches:
+              only:
+                - dev   
+      - hold-apply:
+          type: approval     
+          requires:
+            - dev-plan                  
+      - dev-apply:
           filters:
             branches:
               only:
