--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,6 @@ jobs:
           command: |
             cd environments/dev-env/ && terraform apply -auto-approve tfplan            
 
-
-
   prod-plan:
     docker:
       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
@@ -63,13 +61,13 @@ workflows:
             branches:
               only:
                 - dev   
-      - hold-apply:
+      - dev-apply:
           type: approval     
           requires:
             - dev-plan                  
       - dev-apply:
           requires:
-            - hold-apply        
+            - dev-apply        
       - prod-plan:
           filters:
             branches:
